# rust-acitx-db-benchmarks

./: .dockerignore  .env.sample  .gitignore  BENCHMARK.md  Cargo.toml  Dockerfile  README.md  benchmark.js  docker-compose.yml
apps/api/: Cargo.toml
apps/api/src/: db_service.rs  main.rs
apps/api/src/calculator/: controller.rs  mod.rs  routes.rs  service.rs
apps/api/src/db_service/: mod.rs
apps/api/src/db_service/schema/: todo.rs
apps/api/src/db_service/service/: todo.rs
apps/api/src/test_api/: mod.rs  service.rs
apps/api/src/todo/: controller.rs  mod.rs  service.rs
apps/api_diesel/: Cargo.toml
apps/api_diesel/src/: main.rs
apps/api_diesel/src/calculator/: service.rs
apps/api_diesel/src/db_service/: models.rs  schema.rs
apps/api_diesel/src/db_service/service/: todo.rs
apps/api_diesel/src/test_api/: controller.rs
apps/api_diesel/src/todo/: controller.rs  mod.rs  service.rs
apps/calculator/: Cargo.toml
apps/calculator/src/: main.rs
benchmark/: create_todo.js  get_todo.js  get_todo_list.js  hello_world.js
libs/database/: Cargo.toml
libs/database/src/: lib.rs
libs/database_diesel/: Cargo.toml
libs/database_diesel/src/: lib.rs
libs/database_diesel_service/: Cargo.toml
libs/database_diesel_service/src/: lib.rs
libs/database_diesel_service/src/models/: todo.rs
libs/database_diesel_service/src/service/: todo.rs
libs/database_service/: Cargo.toml
libs/database_service/src/: lib.rs
libs/database_service/src/schema/: todo.rs
libs/database_service/src/service/: todo.rs
libs/logger/: Cargo.toml  README.md
libs/logger/src/: lib.rs
migrations/: 20221122200709_init.down.sql  20221122200709_init.up.sql
