[workspace]

members = [
  "apps/calculator",
  "apps/api",
  "libs/logger",
  "libs/database"
]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["Duye Chen <k078264@gmail.com>"]
description = "A demo"
readme = "./README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid", "offline", "time", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
env_logger = "0.9.3"
log = "0.4.17"
dotenv = "0.15"
anyhow = "1.0"
