[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../../libs/logger" }
database = { path = "../../libs/database" }
database_service = { path = "../../libs/database_service" }
tokio = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
