[package]
name = "api_diesel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../../libs/logger" }
database_diesel = { path = "../../libs/database_diesel" }
database_diesel_service = { path = "../../libs/database_diesel_service"}
actix-web = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
