[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "offline"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
