[package]
name = "database_diesel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
diesel = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
r2d2 = "0.8"
