[package]
name = "database_diesel_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../../libs/logger" }
database_diesel = {path = "../../libs/database_diesel" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
diesel = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
