[package]
name = "database_service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../../libs/logger" }
database = { path = "../../libs/database" }
tokio = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
